# RIOT

./: .gitignore
examples/hello-rcoap/: Makefile  main.c
examples/wireguard-example/: Makefile  README.md  main.c
makefiles/: cargo-targets.inc.mk
sys/include/: rcoap.h  wireguard.h
sys/include/net/: wireguard.h
sys/include/net/gnrc/ipv6/ipsec/: ipsec.h
sys/net/gnrc/: Makefile  Makefile.dep
sys/net/gnrc/network_layer/ipv6/ipsec/: Cargo.toml  Makefile.dep
sys/net/gnrc/network_layer/ipv6/ipsec/src/: Makefile.include  lib.rs
sys/net/gnrc/network_layer/wireguard/: Cargo.toml  Makefile  Makefile.include
sys/net/gnrc/network_layer/wireguard/src/: lib.rs
sys/rcoap/: Cargo.toml  Kconfig  Makefile  Makefile.dep  Makefile.include
sys/rcoap/src/: lib.rs
sys/rust_riotmodules/: Cargo.toml  Kconfig
sys/rust_riotmodules/src/: lib.rs
sys/wireguard/: Cargo.toml  Makefile.include
sys/wireguard/src/: lib.rs
tests/ipsec_basic_test/: Makefile  README.md  main.c
tests/ipsec_basic_test/tests/: 01-run.py
tests/wireguard-basic-test/: Makefile  README.md  main.c
