[package]
name = "riot-module-gnrc-wireguard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riot-wrappers = { version = "^0.8", features = ["set_panic_handler", "panic_handler_format"] }
sha2 = { version = "^0.10", default-features = false }
