[package]
name = "riot-module-gnrc-ipv6-ipsec"
version = "0.1.0"
edition = "2021"

[dependencies]
riot-wrappers = { version = "^0.8",  features = ["set_panic_handler", "panic_handler_format"] }
sha2 = { version = "^0.10", default-features = false }
sha1 = { version = "^0.10", default-features = false }
cbc = "0.1.2"
aes-gcm = { version = "^0.10", default-features = false }

